[package]
name = "cardware-evm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
hex = "0.4"
rlp = "0.5"
ethereum-types = "0.12"
ethers = "1.0"
tiny-keccak = "2.0"
base64 = "0.13"
bitcoin = { version="0.32", features=["base64"]}
bs58 = {version="0.4",features=["check"]}

#This dependancy is just for testing and isn't needed for build outs and stops wasm-pack build
#tokio = { version = "1", features = ["full"]}
