[package]
name = "cardware-evm"
version = "1.0.4"
edition = "2021"
license = "GPL-3.0-only"
description = "The official EVM library for interacting with a Cardware device through web."
authors = ["Cardware Wallet (Pty) Ltd"]
homepage = "https://cardwarewallet.com"
repository = "git+https://github.com/cardware-wallet/cardware-evm.git"
keywords = ["evm", "wallet", "cardware", "cardware-wallet"]
readme = "README.md"

[lib]
crate-type = ["cdylib","rlib"]

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
reqwest = { version = "0.11", default-features = false, features = ["json","rustls-tls"] }
hex = "0.4"
rlp = "0.5"
ethereum-types = "0.12"
tiny-keccak = "2.0"
base64 = "0.13"
bitcoin = { version="0.32", features=["base64"]}
bs58 = {version="0.4",features=["check"]}
ethabi              = "14.0"
sha3                = "0.10"
ethers-core         = "2.0.14"

#This dependancy is just for testing and isn't needed for build outs and stops wasm-pack build
#tokio = { version = "1", features = ["full"]}
